--- a/res/layout/activity_fullscreen.xml
+++ b/res/layout/activity_fullscreen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".FullscreenActivity" >
+    tools:context=".MainActivity" >
     
     <com.bandwidth.tv.ViewPagerFlipper
         android:id="@+id/fullscreen_content"
